Fix wrapping issue

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -16,7 +16,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 }
 
 h1 {
